@startuml

title __CREATORS's Class Diagram__\n

  package sase.sase.specification {
    package sase.sase.specification.creators {
      abstract class CrossProductSimulationSpecificationCreator {
          + createSpecifications()
          {abstract} # createWorkloadSpecifications()
      }
    }
  }
  

  package sase.sase.specification {
    package sase.sase.specification.creators {
      interface ISimulationSpecificationCreator {
          {abstract} + createSpecifications()
      }
    }
  }
  

  package sase.sase.specification {
    package sase.sase.specification.creators {
      abstract class RandomPatternSpecificationCreator {
          {static} # filteredEventTypes : String[]
          - conditionCreator : IConditionSpecificationCreator
          - conditionSetCreator : IConditionSpecificationSetCreator
          {static} + eventTypeListToEventNameList()
          + RandomPatternSpecificationCreator()
          + createSpecifications()
          - createPatternSpecifications()
          - createPatternSpecification()
          # createEventTypesForPattern()
          # createPatternName()
          # getTimeWindowForPatternGenerator()
          {abstract} # createPatternType()
          {abstract} # createPatternStructure()
          {abstract} # createNegatedEventTypes()
          {abstract} # createIteratedEventTypes()
      }
    }
  }
  

  package sase.sase.specification {
    package sase.sase.specification.creators {
      abstract class SelectivityEstimationSetupCreator {
          + createSpecifications()
          {abstract} # getEventTypeNames()
          {abstract} # createSpecificationsForEventTypePair()
      }
    }
  }
  

  package sase.sase.specification {
    package sase.sase.specification.creators {
      class SinglePatternCrossProductSimulationSpecificationCreator {
          # createWorkloadSpecifications()
      }
    }
  }
  

  package sase.sase.specification {
    package sase.sase.specification.creators {
      class SpecificationCreatorFactory {
          {static} + createSpecificationCreator()
      }
    }
  }
  

  package sase.sase.specification {
    package sase.sase.specification.creators {
      enum SpecificationCreatorTypes {
        NONE
        CORRELATION_SELECTIVITY_ESTIMATION
        DELTA_SELECTIVITY_ESTIMATION
        CROSS_PRODUCT_SINGLE
        STOCK_EVALUATION
        CROSS_PRODUCT_MULTI_STOCK
      }
    }
  }
  

  CrossProductSimulationSpecificationCreator -up-|> ISimulationSpecificationCreator
  RandomPatternSpecificationCreator -up-|> ISimulationSpecificationCreator
  SelectivityEstimationSetupCreator -up-|> ISimulationSpecificationCreator
  SinglePatternCrossProductSimulationSpecificationCreator -up-|> ISimulationSpecificationCreator


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
